# rust-workspace-preset

./: .env.example  Cargo.toml  Dockerfile  README.md  deny.toml  justfile
.github/workflows/: main.yml
crates/generate-random-value/: Cargo.toml
crates/generate-random-value/src/: config.rs  main.rs
crates/generate_random_value/: Cargo.toml
crates/init-log/: Cargo.toml
crates/init-log/src/: lib.rs
generate_random_value/: Cargo.toml
generate_random_value/src/: config.rs  main.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: test_speed.rs
