[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Denis Lavrentev"]
license = "MIT AND Apache-2.0"
edition = "2021"
repository = "https://github.com/defernus/rust-workspace-preset"
keywords = ["boilerplate", "workspace", "example", "preset"]

[workspace.dependencies]
rand = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# project packages
generate-random-value = { version = "0.1.0", path = "./crates/generate_random_value" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
