[package]
name = "generate-random-value"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
rand = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
