[package]
name = "init-log"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
log.workspace = true
color-eyre.workspace = true
